Add ability to start Neo4j on top of JDK with enabled project Valhalla ()
- workaround of long cache size estimation
- workaround of Unsage.getFieldOffset failure
(-Dorg.neo4j.memory.HeapEstimator.ignoreFailedUnsafeLookups=true)

cherry-picks: