@@ -78,19 +78,25 @@ final class RuntimeInternals {
             OBJECT_ALIGNMENT = 8;
         }
 
-        // get min/max value of cached Long class instances:
-        long longCacheMinValue = 0;
-        while (longCacheMinValue > Long.MIN_VALUE
-                && Long.valueOf(longCacheMinValue - 1) == Long.valueOf(longCacheMinValue - 1)) {
-            longCacheMinValue -= 1;
+        // bypass cache estimation on a valhalla enabled VM's
+        if (new Long(0) == new Long(0)) {
+            LONG_CACHE_MIN_VALUE = Long.MIN_VALUE;
+            LONG_CACHE_MAX_VALUE = Long.MAX_VALUE;
+        } else {
+            // get min/max value of cached Long class instances:
+            long longCacheMinValue = 0;
+            while (longCacheMinValue > Long.MIN_VALUE
+                    && Long.valueOf(longCacheMinValue - 1) == Long.valueOf(longCacheMinValue - 1)) {
+                longCacheMinValue -= 1;
+            }
+            long longCacheMaxValue = -1;
+            while (longCacheMaxValue < Long.MAX_VALUE
+                    && Long.valueOf(longCacheMaxValue + 1) == Long.valueOf(longCacheMaxValue + 1)) {
+                longCacheMaxValue += 1;
+            }
+            LONG_CACHE_MIN_VALUE = longCacheMinValue;
+            LONG_CACHE_MAX_VALUE = longCacheMaxValue;
         }
-        long longCacheMaxValue = -1;
-        while (longCacheMaxValue < Long.MAX_VALUE
-                && Long.valueOf(longCacheMaxValue + 1) == Long.valueOf(longCacheMaxValue + 1)) {
-            longCacheMaxValue += 1;
-        }
-        LONG_CACHE_MIN_VALUE = longCacheMinValue;
-        LONG_CACHE_MAX_VALUE = longCacheMaxValue;
 
         // Compensate for compressed string in Java 9+
         VarHandle stringValueArray;
